k8s/platform/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fleetops-prod
  labels:
    app.kubernetes.io/name: fleetops-prod
    app.kubernetes.io/managed-by: terraform
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets
  labels:
    app.kubernetes.io/name: external-secrets
    app.kubernetes.io/managed-by: helm
