k8s/platform/gateway-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kgateway-nodeport
  namespace: kgateway-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: kgateway
    app.kubernetes.io/name: kgateway
    kgateway: kgateway
  ports:
    - name: http
      port: 80
      targetPort: 9977
      nodePort: 30080
      protocol: TCP
